Fixed spacing in header navigation menu.

--- a/themes/inhabitent/sass/_navigation.scss
+++ b/themes/inhabitent/sass/_navigation.scss
@@ -161,7 +161,7 @@ a {
 
 .main-navigation {
   justify-content: flex-end;
-  padding: 5px;
+  padding: 11px; 
 }
 
 .main-navigation a {
